--- a/main.css
+++ b/main.css
@@ -15,12 +15,19 @@
     text-decoration: none;
 }
 
+.menubut,
+.menubut:visited,
+.menubut:hover {
+    color: var(--bs-body-color);
+    text-decoration: none;
+}
+
 .arrowicon {
 
     transition: 0.6s ease;
 }
 
-a:not(.collapsed) i {
+.arrow:not(.collapsed) i {
     transform: rotate(-180deg);
     transition: 0.6s ease;
 }
