--- a/main.css
+++ b/main.css
@@ -1,6 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
 * {
+    font-family: 'Open Sans', sans-serif;
+}
+
+.title {
     font-family: 'Titillium Web', sans-serif;
 }
 
