--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@
 
 @font-face {
     font-family: 'AldotheApache';
-    src: url('AldotheApache.ttf') format('truetype');
+    src: url('/ctfuniversitario/AldotheApache.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
