--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,300');
 
 @font-face {
     font-family: 'AldotheApache';
@@ -465,3 +466,45 @@ button:hover {
     font-size: 2rem;
     font-family: arial !important;
 }
+
+
+.horario {
+    line-height: 1.5;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
+    letter-spacing: 0.2em;
+    color: #333;
+    text-align: center;
+}
+
+
+.horario table {
+    line-height: 1;
+    width: 100%;
+    max-width: 80rem;
+}
+
+.horario table td {
+    width: 20%;
+    text-align: center;
+    padding: 1rem;
+}
+
+.horario table tr:last-child {
+    font-weight: bold;
+    font-size: 0.8rem !important;
+    text-transform: uppercase;
+}
+
+.horario table tr:first-child {
+    font-size: 2.2rem !important;
+    
+}
+
+.horario table span {
+    font-size: 1.2rem;
+    font-weight: bold;
+    letter-spacing: 0;
+    vertical-align: top;
+}
+
