--- a/main.css
+++ b/main.css
@@ -470,7 +470,7 @@ button:hover {
 
 .horario {
     line-height: 1.5;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif !important;
     font-weight: 300;
     letter-spacing: 0.2em;
     color: #333;
@@ -478,39 +478,21 @@ button:hover {
 }
 
 
-.horario table {
-    line-height: 1;
-    width: 100%;
-    max-width: 80rem;
+.horario span{
+    font-family: 'Open Sans', sans-serif !important;
+    font-size: 1.2rem;
+    letter-spacing: 0;
+    vertical-align: top;
 }
 
-.horario table td {
-    width: 20%;
-    text-align: center;
-    padding: 1rem;
-}
-
-.horario table tr:last-child {
+.horario .time{
+    font-size: 1.8rem !important;
     font-weight: bold;
-    font-size: 0.8rem !important;
+
+}
+.horario .event{
+    font-size: 1.2rem !important;
     text-transform: uppercase;
-}
 
-.horario table tr:first-child {
-    font-size: 2.2rem !important;
-    
-}
-
-.horario table span {
-    font-size: 1.2rem;
-    font-weight: bold;
-    letter-spacing: 0;
-    vertical-align: top;
-}
-.horario div span {
-    font-size: 1.2rem;
-    font-weight: bold;
-    letter-spacing: 0;
-    vertical-align: top;
 }
 
